[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme_test.tres" type="Theme" id=1]
[ext_resource path="res://AccesibilityMenu.gd" type="Script" id=2]

[node name="AccesibilityMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 0 )
color = Color( 0.372549, 0.458824, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 106.0
margin_top = 127.0
margin_right = 406.0
margin_bottom = 172.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 77.0
margin_bottom = 15.0
text = "Game Speed"

[node name="GameSpeedSlider" type="HSlider" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 81.0
margin_right = 181.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = 0.1
max_value = 1.0
step = 0.05
value = 1.0
ticks_on_borders = true

[node name="GameSpeedValueLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 185.0
margin_right = 214.0
margin_bottom = 15.0
text = "100%"

[node name="AccesibilityMenuBackButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 300.0
margin_bottom = 45.0
text = "Back"
[connection signal="value_changed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/GameSpeedSlider" to="." method="_on_GameSpeedSlider_value_changed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/AccesibilityMenuBackButton" to="." method="_on_AccesibilityMenuBackButton_pressed"]
